--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -30,7 +30,7 @@
         <a class="w3-bar-item w3-button w3-wide" onclick="location.href='..'">Task Scheduler</a>
         <!-- Right-sided navbar links -->
         <div class="w3-right w3-hide-small">
-            <form method="post" action="/logout">
+            <form method="post" action="/index">
                 <a href="/#home" class="w3-bar-item w3-button"><i class="fas fa-user"></i>LOGOUT</a>
                 <a href="/#about" class="w3-bar-item w3-button">ABOUT</a>
             </form>
